--- a/css/styles.css
+++ b/css/styles.css
@@ -167,11 +167,19 @@ custom scrollbar
     animation: spin 1s ease-in-out infinite;
     position: fixed;
     right: 50%;
-    top: 20px;
+    top: 40%;
     z-index: 9999;
+    box-shadow: 0px 0px 10px 1px #353030;
   }
   
   @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+  }
+
+  .fixed-action-btn{
+      opacity: 0.4;
+  }
+  .fixed-action-btn:hover{
+      opacity: 1.0;
   }
