developed past search bookmark modal

--- a/css/styles.css
+++ b/css/styles.css
@@ -183,3 +183,7 @@ custom scrollbar
   .fixed-action-btn:hover{
       opacity: 1.0;
   }
+
+  .collection .collection-item{
+      font-size: 14px !important;
+  }
